tests/NormalTests/paczka1/small_fuzzy/62974514.err
Error in line 9: uoWeun A760 27,8
Error in line 10: uoWeun S724 48,5
Error in line 11: YeHkkf A760 89,1
